--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,35 +1,42 @@
 body{
-    background-color: rgb(161, 124, 54);
-    color: white;
+    background-color: orange;
+    color: black;
     font-family: 'Comfortaa', cursive;
     font-size: 1.2em;
     padding: 0;
     margin: 0;
     height: 100%;
 }
-header, footer {
+header {
  color: black;
  background-color: #aeaca8;
  width: 100%;
  height: 50px;
 }
+
+footer{
+    color: black;
+    width: 100%;
+    height: 50px;
+}
+
 header{
     display: inline-flex;
     font-family: 'Rambla', sans-serif;
-    font-size: 1.1em;
+    font-size: 1.0em;
 }
 
-#container{
+#contenedor{
     background-image: url(../images/phy11.jpg);
     display: block;
     height: 800px;
 }
 
-.otroIntento{
-   color: yellow;
-   font-weight: bold;
-}
-
 footer{
     text-align: center;
 }
+
+.boton:hover {
+    background-color: Dimgray;
+    color:white;
+  }
